# cs6970

./: CMakeLists.txt  README.md  module.txt
modules/: FindANN.cmake  FindMaya.cmake
src/: CMakeLists.txt  Cluster.cpp  Cluster.h  FindANN.cpp  FindANN.h  Grid.cpp  Grid.h  MaxMinDistSet.cpp  MaxMinDistSet.h  README.MD  corSkinCluster.cpp  corSkinCluster.h  corSkinCmd.cpp  corSkinCmd.h  pluginMain.cpp
test/: CMakeLists.txt  test_MaxMinDistSet.cpp
